tests/any2mochi/go/dataset_sort_take_limit.error
line 6: parse error: unexpected token "[" (expected TypeRef)
  fun _paginate(src: []T, skip: int, take: int): []T {}
