tests/any2mochi/go/dataset_sort_take_limit.mochi
type Product {
  Name: string
  Price: int
}
fun main() {}
fun _paginate(src: []T, skip: int, take: int): []T {}
